fixing perf and language menu spacing for accessibility

--- a/src/components/LanguagesMenu/LanguagesMenu.scss
+++ b/src/components/LanguagesMenu/LanguagesMenu.scss
@@ -16,6 +16,10 @@
     position: relative;
     transition: transform 0.3s, filter 0.3s;
 
+    @media (max-width: 992px) {
+      margin: 0 15px;
+    }
+
     &.active {
       transform: scale(1.5);
     }
